# sourcery

./: CHANGELOG.md  COMMERCIAL.md  Cargo.toml  LICENSING.md  README.md  deny.toml  justfile
.github/workflows/: CI.yml  docs.yml  release.yml
docs/: PRODUCTION_GAPS.md
docs/design/: api-improvements.md  serde-json-exposure.md  serde_json_exposure.md  staged_event_inconsistency.md  trait-bounds.md
docs/src/: SUMMARY.md  introduction.md
docs/src/advanced/: custom-metadata.md  custom-stores.md  event-versioning.md  optimistic-concurrency.md  snapshots.md  subscriptions.md
docs/src/concepts/: architecture.md  cqrs-overview.md  event-sourcing-primer.md
docs/src/core-traits/: aggregate.md  commands.md  domain-event.md  projections.md  stores.md
docs/src/derive-macros/: aggregate-derive.md  manual-implementation.md  projection-derive.md
docs/src/getting-started/: installation.md  quickstart.md
docs/src/reference/: comparison.md  design-decisions.md  real-time-subscriptions.md
docs/src/testing/: test-framework.md
examples/: advanced_projection.rs  inventory_report.rs  optimistic_concurrency.rs  quickstart.rs  read_your_writes.rs  snapshotting.rs  subscription_billing.rs  versioned_events.rs
examples/storefront/: Cargo.toml  README.md
examples/storefront/src/: app.rs  coordinator.rs  domain.rs  lib.rs  main.rs  metadata.rs  projections.rs
examples/storefront/src/domain/: ids.rs  order.rs  payment.rs  product.rs
examples/storefront/tests/: concurrency.rs  fulfillment.rs  order_rules.rs  payment_rules.rs  product_rules.rs
sourcery-core/: CHANGELOG.md  Cargo.toml  README.md
sourcery-core/src/: aggregate.rs  concurrency.rs  event.rs  from_events.rs  key.rs  lib.rs  projection.rs  reactor.rs  repository.rs  snapshot.rs  store.rs  subscription.rs  test.rs
sourcery-core/src/snapshot/: inmemory.rs
sourcery-core/src/store/: inmemory.rs
sourcery-macros/: CHANGELOG.md  Cargo.toml
sourcery-macros/src/: lib.rs
sourcery-macros/tests/: trybuild.rs
sourcery-macros/tests/ui/: aggregate_event_name_collision.rs  aggregate_generics.rs  common.rs  projection_generics.rs
sourcery-macros/tests/ui/fail/: aggregate_duplicate_attribute.rs  aggregate_duplicate_attribute.stderr  aggregate_empty_events.rs  aggregate_empty_events.stderr  aggregate_error_string_literal.rs  aggregate_error_string_literal.stderr  aggregate_event_enum_non_string.rs  aggregate_event_enum_non_string.stderr  aggregate_id_string_literal.rs  aggregate_id_string_literal.stderr  aggregate_kind_non_string.rs  aggregate_kind_non_string.stderr  aggregate_missing_error.rs  aggregate_missing_error.stderr  aggregate_missing_events.rs  aggregate_missing_events.stderr  aggregate_missing_id.rs  aggregate_missing_id.stderr  aggregate_on_enum.rs  aggregate_on_enum.stderr  projection_duplicate_attribute.rs  projection_duplicate_attribute.stderr  projection_id_string_literal.rs  projection_id_string_literal.stderr  projection_kind_non_string.rs  projection_kind_non_string.stderr  projection_metadata_string_literal.rs  projection_metadata_string_literal.stderr  projection_missing_id.rs  projection_missing_id.stderr  projection_on_enum.rs  projection_on_enum.stderr
sourcery-macros/tests/ui/pass/: aggregate_event_name_collision.rs  aggregate_generics.rs  projection_auto_projection_filters.rs  projection_generics.rs  projection_no_attributes.rs
sourcery-postgres/: CHANGELOG.md  Cargo.toml
sourcery-postgres/benches/: snapshot_store.rs
sourcery-postgres/src/: error.rs  lib.rs  snapshot.rs  store.rs  subscription.rs
sourcery-postgres/src/store/: commit.rs  live.rs  load.rs  subscribe.rs
sourcery-postgres/tests/: event_store.rs  snapshot_store.rs  subscription.rs
src/: lib.rs
tests/: coverage_more.rs  projection.rs  reactor.rs  repository.rs  subscription.rs  test_executor.rs
