[package]
name = "sourcery-core"
description = "Core types and traits for the Sourcery library"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[lints]
workspace = true

[features]
default = []
test-util = []

[dependencies]
nonempty = "0.10"
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
thiserror = { version = "2", default-features = false, features = ["std"] }
tracing = { version = "0.1", default-features = false, features = ["attributes", "std"] }

[dev-dependencies]
anyhow = { version = "1", default-features = false, features = ["std"] }
serde-evolve = "0.1.0"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
