[package]
name = "sourcery-macros"
description = "Derive macros for the Sourcery library"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
darling = { version = "0.23", default-features = false }
heck = "0.5"
syn = { version = "2", default-features = false, features = ["full", "parsing", "proc-macro"] }
quote = { version = "1", default-features = false, features = ["proc-macro"] }
proc-macro2 = { version = "1", default-features = false, features = ["proc-macro"] }

[dev-dependencies]
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = "1"
trybuild = "1"
