[package]
name = "sourcery-postgres"
description = "A Postgres implementation of the Sourcery 'EventStore'"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
sourcery-core = { path = "../sourcery-core", version = "0.1"}
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
sqlx = { version = "0.8.3", default-features = false, features = ["json", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = { version = "2", default-features = false, features = ["std"] }
tracing = { version = "0.1", default-features = false, features = ["attributes", "std"] }
uuid = { version = "1", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = { version = "0.6", default-features = false, features = ["async_tokio"] }
nonempty = "0.10"
serde_json = { version = "1", default-features = false, features = ["std"] }
testcontainers = { version = "0.26", default-features = false }
testcontainers-modules = { version = "0.14", default-features = false, features = ["postgres"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", default-features = false, features = ["std", "v4"] }

[[bench]]
name = "snapshot_store"
harness = false
